@@ -5,11 +5,11 @@ using System.Runtime.CompilerServices;
 // Change them to the values specific to your project.
 
 [assembly: AssemblyTitle("comex")]
-[assembly: AssemblyDescription("card commands exchanger for PCSC smartcard readers and serial readers")]
+[assembly: AssemblyDescription("console interface for comex project")]
 [assembly: AssemblyConfiguration("")]
-[assembly: AssemblyCompany("hmandevteam")]
+[assembly: AssemblyCompany("Armando Basile")]
 [assembly: AssemblyProduct("")]
-[assembly: AssemblyCopyright("hmandevteam (c) 2011")]
+[assembly: AssemblyCopyright("Armando Basile (c) 2011")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
 
@@ -17,7 +17,7 @@ using System.Runtime.CompilerServices;
 // The form "{Major}.{Minor}.*" will automatically update the build and revision,
 // and "{Major}.{Minor}.{Build}.*" will update just the revision.
 
-[assembly: AssemblyVersion("0.1.7.0")]
+[assembly: AssemblyVersion("0.1.5.0")]
 
 // The following attributes are used to specify the signing key for the assembly, 
 // if desired. See the Mono documentation for more information about signing.
